; ModuleID = '/home/carl/AnghaBench/freebsd/sys/geom/sched/extr_gs_rr.c_g_rr_fini.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/geom/sched/extr_gs_rr.c_g_rr_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.g_rr_softc = type { i32, i32*, i32 }

@.str = private unnamed_addr constant [28 x i8] c"still a queue under service\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"still scheduled queues\00", align 1
@sc_next = common dso_local global i32 0, align 4
@me = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@M_GEOM_SCHED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @g_rr_fini to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @g_rr_fini(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.g_rr_softc*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.g_rr_softc*
  store %struct.g_rr_softc* %5, %struct.g_rr_softc** %3, align 8
  %6 = load %struct.g_rr_softc*, %struct.g_rr_softc** %3, align 8
  %7 = getelementptr inbounds %struct.g_rr_softc, %struct.g_rr_softc* %6, i32 0, i32 2
  %8 = call i32 @callout_drain(i32* %7)
  %9 = load %struct.g_rr_softc*, %struct.g_rr_softc** %3, align 8
  %10 = getelementptr inbounds %struct.g_rr_softc, %struct.g_rr_softc* %9, i32 0, i32 1
  %11 = load i32*, i32** %10, align 8
  %12 = icmp eq i32* %11, null
  %13 = zext i1 %12 to i32
  %14 = call i32 @KASSERT(i32 %13, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  %15 = load %struct.g_rr_softc*, %struct.g_rr_softc** %3, align 8
  %16 = getelementptr inbounds %struct.g_rr_softc, %struct.g_rr_softc* %15, i32 0, i32 0
  %17 = call i32 @TAILQ_EMPTY(i32* %16)
  %18 = call i32 @KASSERT(i32 %17, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  %19 = load %struct.g_rr_softc*, %struct.g_rr_softc** %3, align 8
  %20 = load i32, i32* @sc_next, align 4
  %21 = call i32 @LIST_REMOVE(%struct.g_rr_softc* %19, i32 %20)
  %22 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @me, i32 0, i32 0), align 4
  %23 = add nsw i32 %22, -1
  store i32 %23, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @me, i32 0, i32 0), align 4
  %24 = load %struct.g_rr_softc*, %struct.g_rr_softc** %3, align 8
  %25 = load i32, i32* @M_GEOM_SCHED, align 4
  %26 = call i32 @free(%struct.g_rr_softc* %24, i32 %25)
  ret void
}

declare dso_local i32 @callout_drain(i32*) #1

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @TAILQ_EMPTY(i32*) #1

declare dso_local i32 @LIST_REMOVE(%struct.g_rr_softc*, i32) #1

declare dso_local i32 @free(%struct.g_rr_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
